# django_stripe_app

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: admin.py  models.py  urls.py  views.py
api/management/commands/: create_items.py
api/migrations/: 0001_initial.py  0002_alter_item_price.py  0003_alter_item_price.py  0003_item_price_stripe_id.py
django_app/: settings.py
static/: addToCart.js  main.js  narrow-jumbotron.css
static/js/: addToCart.js  main.js
templates/: base.html  cancelled.html  index.html  success.html
templates/includes/: footer.html  header.html
templates/main/: cancelled.html  cart.html  home.html  product_detail.html  success.html
