[tool.poetry]
name = "django-stripe-app"
version = "0.1.0"
description = ""
authors = ["Mikhail Moskovkin <anstane228@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
django-environ = "^0.11.2"
stripe = "^7.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
